--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -12,7 +12,7 @@
             <select formControlName="period" class="form-select form-select-sm tw-w-[200px]" (change)="statueChange()">
                 <option value="all">All time</option>
                 <option value="lastMonth">Last month</option>
-                <option value="lastSixMonth">Last six month</option>
+                <option value="lastSixMonths">Last six month</option>
                 <option value="lastYear">Last year</option>
             </select>
         </form>
