--- a/src/app/item/item-list/item-list.component.html
+++ b/src/app/item/item-list/item-list.component.html
@@ -1,4 +1,72 @@
 <div #mainContainer class="grid-container tw-gap-2 tw-overflow-auto tw-h-full">
+    @if(itemsAreLoading){
+    <div class="tw-aspect-[0.7]">
+        <div class="tw-aspect-square">
+            <ngx-skeleton-loader [theme]="{ 
+         width: '100%',
+         height: '100%',
+          'aspect-ratio': '0.6',
+          'border-radius':'0.75rem;'
+        }"></ngx-skeleton-loader>
+        </div>
+        <ngx-skeleton-loader [theme]="{ 
+    width: '100%',
+    height: '15px',
+     'aspect-ratio': '0.6',
+   }"></ngx-skeleton-loader>
+        <ngx-skeleton-loader [theme]="{ 
+        width: '80%',
+        height: '15px',
+         'aspect-ratio': '0.6',
+       }"></ngx-skeleton-loader>
+    </div>
+    <div class="tw-aspect-[0.7] tw-opacity-[70%]">
+        <div class="tw-aspect-square">
+            <ngx-skeleton-loader [theme]="{ 
+         width: '100%',
+         height: '100%',
+          'aspect-ratio': '0.6',
+          'border-radius':'0.75rem;'
+        }"></ngx-skeleton-loader>
+        </div>
+
+
+        <ngx-skeleton-loader [theme]="{ 
+    width: '100%',
+    height: '15px',
+     'aspect-ratio': '0.6',
+   }"></ngx-skeleton-loader>
+        <ngx-skeleton-loader [theme]="{ 
+        width: '80%',
+        height: '15px',
+         'aspect-ratio': '0.6',
+       }"></ngx-skeleton-loader>
+    </div>
+    <div class="tw-aspect-[0.7] tw-opacity-[60%]">
+        <div class="tw-aspect-square">
+            <ngx-skeleton-loader [theme]="{ 
+         width: '100%',
+         height: '100%',
+          'aspect-ratio': '0.6',
+          'border-radius':'0.75rem;'
+        }"></ngx-skeleton-loader>
+        </div>
+
+
+        <ngx-skeleton-loader [theme]="{ 
+    width: '100%',
+    height: '15px',
+     'aspect-ratio': '0.6',
+   }"></ngx-skeleton-loader>
+        <ngx-skeleton-loader [theme]="{ 
+        width: '80%',
+        height: '15px',
+         'aspect-ratio': '0.6',
+       }"></ngx-skeleton-loader>
+    </div>
+
+
+    }@else {
     @for(item of items; track item.id){
     <div id="item" class="tw-flex tw-flex-col tw-cursor-pointer  " [routerLink]="['/item/item-detail']"
         [queryParams]="{id:item.id}">
@@ -46,4 +114,6 @@
         </div>
     </div>
     }
+    }
+
 </div>
