--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -16,6 +16,7 @@
                 <option value="lastYear">Last year</option>
             </select>
         </form>
+        <span class="tw-text-sm tw-ms-auto">{{orders.length}} orders</span>
 
     </div>
     <div class="tw-flex tw-flex-col tw-gap-4 tw-h-full">
