e2e cypress has been added

--- a/src/app/item/item-detail/item-detail.component.html
+++ b/src/app/item/item-detail/item-detail.component.html
@@ -189,7 +189,7 @@
                         }
                     </div>
                     <button class="btn btn-rounded tw-ms-auto"
-                        (click)="onSimilarItemAddToCartClick($event,similarItem)">
+                        (click)="onSimilarItemAddToCartClick(similarItem)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
                             <path
